--- a/C1/BinModel/CMakeLists.txt
+++ b/C1/BinModel/CMakeLists.txt
@@ -2,8 +2,8 @@ add_library(BinModel "")
 
 target_sources(
     BinModel
-    PRIVATE ${CMAKE_CURRENT_LIST_DIR}/BinModel01.cpp
-    PUBLIC ${CMAKE_CURRENT_LIST_DIR}/BinModel01.h
+    PRIVATE ${CMAKE_CURRENT_LIST_DIR}/BinModel.cpp
+    PUBLIC ${CMAKE_CURRENT_LIST_DIR}/BinModel.h
 )
 
 target_include_directories(
